# YOLO-NAS-OpenVino-cpp

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/: cli.hpp  draw.hpp  processing.hpp  utils.hpp  yolo-nas.hpp
src/: cli.cpp  draw.cpp  main.cpp  processing.cpp  utils.cpp  yolo_nas.cpp
